@@ -13,7 +13,7 @@ import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.WebDriverWait;
 
 import java.time.Duration;
-import java.util.Arrays;
+import java.util.List;
 
 public class BasePage {
     protected AppiumDriver driver;
@@ -24,12 +24,6 @@ public class BasePage {
         locators = LocatorManager.getLocators();
     }
 
-    /**
-     * Constructs a new BasePage instance.
-     *
-     * @param driver The AppiumDriver instance to use for interacting with the app.
-     * @throws RuntimeException If the locator file cannot be found or loaded.
-     */
     public BasePage(AppiumDriver driver) {
         this.driver = driver;
     }
@@ -44,14 +38,6 @@ public class BasePage {
         webElement.sendKeys(value);
     }
 
-    /**
-     * Retrieves the locator for a given screen and element.
-     *
-     * @param screen  The screen name where the element is located.
-     * @param element The element name to find.
-     * @return The locator for the specified element.
-     * @throws IllegalArgumentException If the screen or element is not found, or if the locator format is invalid.
-     */
     protected By getLocator(String screen, String element) {
         if (!locators.has(screen)) {
             throw new IllegalArgumentException("Screen '" + screen + "' not found in locators file.");
@@ -63,6 +49,13 @@ public class BasePage {
         }
 
         String locator = screenLocators.get(element).getAsString();
+
+        // Replace {{TODAY}} with current date
+        if (locator.contains("{{TODAY}}")) {
+            String today = new java.text.SimpleDateFormat("EEEE, MMMM d, yyyy").format(new java.util.Date());
+            locator = locator.replace("{{TODAY}}", today);
+        }
+
         String[] parts = locator.split(":", 2);
         if (parts.length < 2) {
             throw new IllegalArgumentException("Invalid locator format: " + locator);
@@ -81,24 +74,11 @@ public class BasePage {
         };
     }
 
-    /**
-     * Waits for a web element to be visible on the screen.
-     *
-     * @param locator The locator of the web element to wait for.
-     * @return The located WebElement once it is visible.
-     */
     private WebElement waitForElement(By locator) {
         WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(FrameworkConstant.WAIT_STRATEGY));
         return wait.until(ExpectedConditions.visibilityOfElementLocated(locator));
     }
 
-    /**
-     * Finds a web element on the screen by its locator.
-     *
-     * @param screen  The screen name where the element is located.
-     * @param element The element name to find.
-     * @return The located WebElement.
-     */
     protected WebElement findElement(String screen, String element) {
         if (element.equals("add_menu")) {
             System.out.println(screen + " " + element);
@@ -149,7 +129,7 @@ public class BasePage {
                     PointerInput.Origin.viewport(), startX, endY));
             scroll.addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
 
-            driver.perform(Arrays.asList(scroll));
+            driver.perform(List.of(scroll));
 
             attempt++;
         }
